tests/sumo/devices/ssm/errors/filter_edges_cannot_interpret_line/errors.sumo.agg
Warning: Cannot interpret line in SSM device edge filter (input_selection.txt): egde:WC
Warning: 1 total messages of type: No measures specified for ssm device of vehicle '%'. Registering all available SSMs.
